{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1939,
  "lineage": "849a3848-8205-9b90-34b0-a9e37b462283",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:internet-gateway/igw-06c877f60e3b1f64f",
            "id": "igw-06c877f60e3b1f64f",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloud-igw"
            },
            "tags_all": {
              "Name": "cloud-igw"
            },
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05db56a8ea18b4dc5",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-09f103735578016da",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app-ec2-instance-profile",
            "id": "i-09f103735578016da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "app_key.pem",
            "launch_template": [
              {
                "id": "lt-0a06537114e5e0b89",
                "name": "cloudami-20251202044640551400000003",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ba25bdae081d0f77"
              }
            ],
            "primary_network_interface_id": "eni-0ba25bdae081d0f77",
            "private_dns": "ip-192-168-108-6.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.108.6",
            "public_dns": "ec2-43-203-169-28.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.169.28",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e04ca5c29c76ba5b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6097fb0c6c9e5cb",
            "tags": {
              "Name": "app-ec2"
            },
            "tags_all": {
              "Name": "app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0105ca2d43bce06a3"
            ]
          },
          "dependencies": [
            "module.iamrole.aws_iam_instance_profile.app_instance_profile",
            "module.iamrole.aws_iam_role.app_ec2_role",
            "module.instance.aws_launch_template.cloudami_template",
            "module.key.aws_key_pair.app_key",
            "module.key.tls_private_key.app_key",
            "module.sg.aws_security_group.ec2_sg",
            "module.subnet.aws_subnet.public_subnet_ids",
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-0648ca33b529c5dc0",
            "id": "rtb-0648ca33b529c5dc0",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-095ecfe4b5259e466",
            "id": "rtb-095ecfe4b5259e466",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c877f60e3b1f64f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a64fd13504eff13e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-095ecfe4b5259e466",
            "subnet_id": "subnet-0e6097fb0c6c9e5cb"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet_ids",
            "module.vpc.aws_vpc.cloud4"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043414aa14c2634bb",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-095ecfe4b5259e466",
            "subnet_id": "subnet-06d80ba37b63b07eb"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet_ids",
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0105ca2d43bce06a3",
            "description": "Security group for EC2 SSH \u0026 HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105ca2d43bce06a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0d4049c69094d327a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4049c69094d327a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0ea8a349770adae90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.108.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea8a349770adae90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-a"
            },
            "tags_all": {
              "Name": "db-subnet-a"
            },
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        },
        {
          "index_key": "db-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-091e6a4a7eefc38c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.108.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091e6a4a7eefc38c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-c"
            },
            "tags_all": {
              "Name": "db-subnet-c"
            },
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0e6097fb0c6c9e5cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.108.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6097fb0c6c9e5cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-06d80ba37b63b07eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.108.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d80ba37b63b07eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-0748494bfb8aedfd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloud4"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:vpc/vpc-0748494bfb8aedfd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.108.0/24",
            "default_network_acl_id": "acl-03728e5bab847c22a",
            "default_route_table_id": "rtb-02f76d45f98eb62fb",
            "default_security_group_id": "sg-0f7b5c256c1a2e617",
            "dhcp_options_id": "dopt-0bb6bf2626d3217a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0748494bfb8aedfd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f76d45f98eb62fb",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudproject-vpc"
            },
            "tags_all": {
              "Name": "cloudproject-vpc"
            }
          }
        }
      ]
    }
  ]
}